# vibe-DataCollectorHub

./: .gitignore  AGENTS.md  README.md  V1_0_FEATURE_LIST.md  V1_0_KNOWN_ISSUES.md  init_and_run.py  pyproject.toml  run_scheduler.py
.trae/rules/: project-rules.md
api/: __init__.py  server.py
collection/: __init__.py  command_service.py  downloader_client.py  scope_selector.py  sync_orchestrator.py
core/: __init__.py  base_adapter.py  dataset_resolver.py  mcp_tools.py  paths.py  pipeline.py  plugin_manager.py  scheduler.py  websocket_manager.py
dashboard/: app.py
doc/: 01-overview.md  02-prd.md  03-architecture.md  04-data-model.md  05-api-spec.md  06-plugin-dev-guide.md  07-operations.md  README.md  插件开发模板集.md
doc/decisions/: ADR-001-plugin-isolation.md  ADR-002-scheduler-jobs-only.md  ADR-003-single-poll-broadcast-websocket.md  ADR-004-coroutine-level-isolation.md  ADR-005-three-layer-data.md  ADR-006-mcp-server-support.md  ADR-007-dcp-integration.md  ADR-008-sourceevent-ingestion.md  ADR-009-sandbox-api.md
health/: dataset_health.py  domain_health.py  summary.py
plugins/: __init__.py  dcp.py  demo_plugin.py  rss_news.py
plugins/_base/: __init__.py
processing/: normalizer_runner.py
processing/dcp/: daily_meeting.py  domain.py  (+3 more)
storage/: __init__.py  sqlite_store.py
tests/: conftest.py  test_command_batch_orchestration.py  test_data_health.py  test_dcp_domain_normalizers.py  test_domain_read_api.py  test_external_collection_jobs.py  test_ingestion_batch_v1.py  test_ingestion_raw_events.py  test_plugin_runtime.py  test_processing_station.py
(+14 files in other folders)
