[project]
name = "data-collector-hub"
version = "1.0.0"
description = "面向广域数据采集与监控的插件化数据基础设施"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Data Collector Hub Team"}
]
keywords = ["data-collection", "plugin", "rss", "websocket", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "apscheduler>=3.10.0",
    "feedparser>=6.0.0",
    "aiohttp>=3.8.0",
    "websockets>=11.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "requests>=2.31.0",
]

[project.scripts]
dch-server = "api.server:main"
dch-scheduler = "run_scheduler:main"

[tool.uv]
python-downloads = "manual"

[tool.uv.pip]
index-url = "https://pypi.org/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/scripts"]
pythonpath = ["."]
